--- a/lib/l10n/intl_tr.arb
+++ b/lib/l10n/intl_tr.arb
@@ -7,6 +7,7 @@
   "settingsScreenTitle": "Ayarlar",
   "accountScreenTitle": "Hesapım",
   "tasksScreenTitle": "Görevler",
+  "taskSaveScreenTitle": "Görev Kaydet/Güncelle",
   "drawerMenuHome": "Ana Sayfa",
   "drawerTasks": "Görevler",
   "drawerMenuSettings": "Ayarlar",
