--- a/lib/l10n/intl_fr.arb
+++ b/lib/l10n/intl_fr.arb
@@ -7,6 +7,7 @@
   "settingsScreenTitle": "Paramètres",
   "accountScreenTitle": "Compte",
   "tasksScreenTitle": "Tâches",
+  "taskSaveScreenTitle": "Enregistrer une tâche",
   "drawerMenuHome": "Accueil",
   "drawerSettingsTitle": "Paramètres",
   "drawerLogoutTitle": "Déconnexion",
