--- a/lib/l10n/intl_fr.arb
+++ b/lib/l10n/intl_fr.arb
@@ -11,5 +11,11 @@
   "drawerMenuHome": "Accueil",
   "drawerSettingsTitle": "Paramètres",
   "drawerLogoutTitle": "Déconnexion",
-  "drawerMenuTasks": "Tâches"
+  "drawerTasks": "Tâches",
+  "pageSettingsTitle": "",
+  "firstName": "",
+  "taskPrice": "",
+  "taskName" : "",
+  "save": ""
+
 }
