mock data ile json menu modeli oluşturuldu...dil sayfa adı , icon bilgisi , url bilgisi ve parent bilgisi gibi bilgiler sahte data ile oluşturuldu. translate ile oluşturulan menu isimlerini çevirmek için traslate locale yapısı oıluşturuldu. dil desteği örneği sayfası incelenebilir.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -16,7 +16,9 @@
   "firstName": "First Name",
   "taskPrice": "Task Price",
   "taskName": "Task Name",
-  "save": "Save"
-
-
+  "save": "Save",
+  "translate_menu_title": "{translate, select, customer{Customers} tasks{Tasks} account{Account} settings{Settings} dashboard{Dashboard}reports{Reports} logout{Logout}  info{Info} language{Language}  theme{Theme}  createOffer{Create Offer}  editOffer{List/Edit} other{Other}}",
+  "language_select": "Select Language",
+  "turkish": "Turkish",
+  "english": "English"
 }
