--- a/lib/l10n/intl_fr.arb
+++ b/lib/l10n/intl_fr.arb
@@ -16,6 +16,9 @@
   "firstName": "",
   "taskPrice": "",
   "taskName" : "",
-  "save": ""
-
+  "save": "",
+  "translate_menu_title": "{translate, select, customer{Customers} tasks{Tasks} account{Account} settings{Settings} dashboard{Dashboard}reports{Reports} logout{Logout}  info{Info} language{Language}  theme{Theme}  createOffer{Create Offer}  editOffer{List/Edit} other{Other}}",
+  "language_select": "Select Language",
+  "turkish": "Turkish",
+  "english": "English"
 }
