default date insert and wdget control

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -212,9 +212,9 @@
   "transport_cost_tl": "Transport",
   "transport_cost_required": "Transport Cost is required",
   "transport_cost_numeric": "Transport Cost must be a valid",
-  "litre": "Litre",
-  "litre_required": "Litre is required",
-  "litre_numeric": "Litre must be a valid",
+  "birim": "birim",
+  "birim_required": "birim is required",
+  "birim_numeric": "birim must be a valid",
   "day": "Day",
   "credit_card": "Credit Card",
   "calculate": "Calculate",
