--- a/lib/l10n/intl_tr.arb
+++ b/lib/l10n/intl_tr.arb
@@ -10,7 +10,7 @@
   "code": "Code",
   "confirm": "Passwords must match",
   "confirm_new": "Confirm New Password",
-  "corporations": "Dağıtım Firmaları",
+  "corporations": "Ana Firmaları",
   "createNewOffer": "Yeni Teklif Oluştur",
   "create_record_error": "Kayıt Oluşturulamadı. Bilgileri kontrol ediniz.!",
   "currentPassword": "Current Password",
@@ -94,7 +94,7 @@
   "password_required": "Şifre gereklidir",
   "password_success": "Password changed successfully",
   "phone": "Phone",
-  "refineries": "Rafineriler",
+  "refineries": "Üreticiler",
   "reports": "Raporlar",
   "reset": "Reset Email Address Password",
   "salesPerson": "Plasiyer",
@@ -103,14 +103,14 @@
   "send": "Gönder",
   "settings": "Ayarlar",
   "station": "Dolum Tesisi",
-  "stations": "Dolum Tesisleri",
-  "station_rate": "Dolum Tesisleri Oran",
+  "stations": "Alt Firmalar",
+  "station_rate": "Alt Firmalar Oran",
   "success": "Password reset successfully",
   "tax_number": "Vergi Numarası",
   "tax_office": "Tax Office",
   "title": "Ana Sayfa",
   "todoList": "Yapılacak İşler",
-  "translate_menu_title": "{translate, select,station{Dolum Tesisleri}  maturityCalculate{Vade Hesaplama}  stationMaturity{Dolum Tesisi Vadeleri} corporation{Dağıtım Firmaları}  corporationMaturity{Dağıtım Firması Vadeleri} refinery{Rafineriler} offer{Teklifler} customer{Müşteriler} salesPerson{Satış Temsilcisi} account{Hesabım} settings{Ayarlar}  dashboard{Grafikler} reports{Raporlar}  logout{Çıkış}  info{Bilgiler}  language{Diller}  theme{Tema}  create{Oluştur}  list{Listele/Düzenle }  other{Diğer}}",
+  "translate_menu_title": "{translate, select,station{Alt Firmalar}  maturityCalculate{Vade Hesaplama}  stationMaturity{Alt Firma Vadeleri} corporation{Ana Firmaları}  corporationMaturity{Ana Firma Vadeleri} refinery{Üreticiler} offer{Teklifler} customer{Müşteriler} salesPerson{Satış Temsilcisi} account{Hesabım} settings{Ayarlar}  dashboard{Grafikler} reports{Raporlar}  logout{Çıkış}  info{Bilgiler}  language{Diller}  theme{Tema}  create{Oluştur}  list{Listele/Düzenle }  other{Diğer}}",
   "translate_status_title": "{translate, select,selected{Tümü}  CALCULATED{Hesaplanan Teklif} APPROVAL_IN_PROGRESS{Teklif Onay} TO_BE_ORDERED{Teklif onaylandı} APPROVAL_REJECTED{Teklif reddedildi} IN_NEGOTIATION{Güncel teklif müşteriye önerildi} ACCEPTED{Güncel teklifi müşteri kabul etti} RESCINDED{Güncel teklifi müşteri red etti} SHIPPED{Tamamlandı} CANCELLED{Teklif geri çekildi ve iptal edildi}  DRAFT{Kaydet} APPROVED{Teklif müşteriye gönderilmeye hazır} ORDERED{Sipariş hazırlandı} other{Diğer}}",
   "turkish": "Türkçe",
   "username_max_length": "Kullanıcı adı en fazla 20 karakter uzunluğunda olmalıdır",
@@ -135,24 +135,24 @@
   "sales_person_code": "Plasiyer Kodu",
   "edit_user": "Kullanıcı Düzenle",
   "edit_corporation": "Dağıtım Firması Düzenle",
-  "edit_refinery": "Rafineri Düzenle",
-  "edit_station": "Dolum Tesisi Düzenle",
+  "edit_refinery": "Üretici Düzenle",
+  "edit_station": "Alt Firma Düzenle",
   "edit_offer": "Teklif Düzenle",
-  "edit_station_maturity": "Dolum Tesisi Vade Düzenle",
+  "edit_station_maturity": "Alt Firma Vade Düzenle",
   "edit_corporation_maturity": "Dağıtım Şirketi Vade Düzenle",
   "list_user": "Kullanıcılar",
-  "list_corporation": "Dağıtım Firmaları",
-  "list_refinery": "Rafineriler",
-  "list_station": "Dolum Tesisleri",
+  "list_corporation": "Ana Firmaları",
+  "list_refinery": "Üreticiler",
+  "list_station": "Alt Firmalar",
   "list_offer": "Teklifler",
   "login": "Kullanıcı Adı",
   "plasiyer": "Plasiyer",
   "create_user": "Kullanıcı Oluştur",
-  "create_refinery": "Rafineri Oluştur",
+  "create_refinery": "Üretici Oluştur",
   "create_corporation": "Dağıtım Firması Oluştur",
-  "create_corporation_maturity": "Dağıtım Firması Vade Oluştur",
-  "create_station": "Dolum Tesisi Oluştur",
-  "create_station_maturity": "Dolum Tesisi Vade Oluştur",
+  "create_corporation_maturity": "Ana Firma Vade Oluştur",
+  "create_station": "Alt Firma Oluştur",
+  "create_station_maturity": "Alt Firma Vade Oluştur",
   "create_offer": "Teklif Oluştur",
   "required_phone_type": "Telefon numarası 5** *** ** ** formatında ve 10 karakter olmalıdır",
   "range": "Aralık",
@@ -212,22 +212,22 @@
   "transport_cost_tl": "Nakliye",
   "transport_cost_required": "Taşıma Maliyeti gereklidir",
   "transport_cost_numeric": "Taşıma Maliyeti sayısal olmalıdır",
-  "litre": "Litre",
-  "litre_required": "Litre gereklidir",
-  "litre_numeric": "Litre sayısal olmalıdır",
+  "birim": "birim",
+  "birim_required": "birim gereklidir",
+  "birim_numeric": "birim sayısal olmalıdır",
   "day": "Gün",
   "credit_card": "Kredi Kartı",
   "calculate": "Hesapla",
   "corporation_required": "Dağıtım Firması gereklidir",
-  "station_required": "Dolum Tesisi gereklidir",
+  "station_required": "Alt Firma gereklidir",
   "destination_city_required": "Varış Şehri gereklidir",
-  "refinery_required": "Rafineri gereklidir",
+  "refinery_required": "Üretici gereklidir",
   "increase": "Bindirim",
   "new_increase": "Yeni Bindirim Oranı",
   "increase_unit_price": "Revize Fiyat",
   "unit_price_update": "Son Fiyatı Güncelle",
   "offer_form": "Teklif Formu",
-  "refinery": "Rafineri",
+  "refinery": "Üretici",
   "corporation": "Dağıtım Firması",
   "maturity_type": "Vade Tipi",
   "total_price": "Toplam Fiyat",
