--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,28 +1,81 @@
 {
   "account": "Account",
+  "active": "Active",
   "address": "Address",
   "admin": "Admin",
+  "approved_status": "Approved",
+  "authorities": "Authorities",
+  "authorities_required": "Authorities is required",
+  "birim": "birim",
+  "birim_numeric": "birim must be a valid",
+  "birim_required": "birim is required",
+  "calculate": "Calculate",
+  "calculated_maturity_screen": "Calculated Maturity",
+  "calculated_status": "Calculated",
   "cancel": "Cancel",
+  "cancelled_status": "Cancelled",
+  "cari_kod": "Account Code",
   "change": "Change Password",
+  "change_nothing": "Nothing changed",
   "change_password": "Change Password",
-  "city": "City",
   "cities": "Cities",
+  "city": "City",
+  "city_required": "City is required",
   "code": "Code",
+  "company_name": "Company Name",
+  "completed_status": "Completed",
   "confirm": "Passwords must match",
   "confirm_new": "Confirm New Password",
+  "confirmation_status": "Confirmation Offers",
+  "corporation": "Corporation",
+  "corporation_required": "Corporation is required",
   "corporations": "Corporations",
+  "cost": "Cost",
+  "create": "Create",
   "createNewOffer": "Create New Offer",
+  "create_corporation": "Create Corporation",
+  "create_corporation_maturity": "Create Corporation Maturity",
+  "create_offer": "Create Offer",
   "create_record_error": "Kayıt Oluşturulamadı. Bilgileri kontrol ediniz.!",
+  "create_refinery": "Create Refinery",
+  "create_station": "Create Station",
+  "create_station_maturity": "Create Station Maturity",
+  "create_user": "Create User",
+  "credit": "Credit",
+  "credit_card": "Credit Card",
   "currentPassword": "Current Password",
   "customer": "Customer",
   "customers": "Customers",
   "daily": "Daily",
   "darkLight": "Dark/Light Mode",
   "dashboard": "Dashboard",
+  "date": "Date",
+  "day": "Day",
+  "debt": "Debt",
+  "delete": "Delete",
+  "delete_confirmation": "Are you sure you want to delete?",
   "description": "CRM",
+  "description_max_length": "Description cannot be more than 20 characters long",
+  "description_min_length": "Description must be at least 5 characters long",
   "description_offer": "Description",
+  "description_regex_pattern": "Description must be a valid",
+  "description_required": "Description is required",
+  "destination_address": "Destination Address",
+  "destination_city": "Destination City",
+  "destination_city_required": "Destination City is required",
+  "destination_district": "Destination District",
+  "detail": "Detail",
   "district": "District",
   "districts": "Districts",
+  "document": "Document",
+  "edit": "Edit",
+  "edit_corporation": "Edit Corporation",
+  "edit_corporation_maturity": "Edit Corporation Maturity",
+  "edit_offer": "Edit Offer",
+  "edit_refinery": "Edit Refinery",
+  "edit_station": "Edit Station",
+  "edit_station_maturity": "Edit Station Maturity",
+  "edit_user": "Edit User",
   "email": "Email",
   "email_error": "Email address not found",
   "email_pattern": "Email must be a valid email address",
@@ -35,6 +88,12 @@
   "empty": "Password cannot be left blank",
   "english": "English",
   "error": "Email address not found",
+  "exit": "Exit",
+  "find": " Find ",
+  "first_name": "First Name",
+  "firstname_max_length": "Firstname cannot be more than 20 characters long",
+  "firstname_min_length": "Firstname must be at least 5 characters long",
+  "firstname_required": "Firstname is required",
   "forgot": "Forgot Password",
   "global": "CRM",
   "home": "Home",
@@ -65,23 +124,46 @@
   "http_431": "Request Header Fields Too Large",
   "http_451": "Unavailable For Legal Reasons",
   "http_500": "Internal Server Error",
+  "id": "ID",
+  "increase": "Increase",
+  "increase_unit_price": "Increase Price",
   "indicator": "Loading...",
   "language_select": "Select Language",
+  "last_name": "Last Name",
+  "lastname_max_length": "Lastname cannot be more than 20 characters long",
+  "lastname_min_length": "Lastname must be at least 5 characters long",
+  "lastname_required": "Lastname is required",
+  "list": "List",
   "listOffer": "List Offer",
+  "list_corporation": "List Corporation",
+  "list_offer": "List Offer",
+  "list_refinery": "List Refinery",
+  "list_station": "List Station",
+  "list_user": "List User",
   "loading": "Loading...",
   "logging_in": "Logging in...",
+  "login": "Login",
   "login_button": "Login",
   "login_error": "Login failed.",
   "login_password": "Password",
   "login_user_name": "Username",
   "logout": "Logout",
   "logout_sure": "Are you sure you want to logout?",
+  "maturity": "Maturity",
+  "maturity_type": "Maturity Type",
+  "maturity_types": "Maturity Types",
   "menu": "Menu",
   "messages": "Kayıt Oluşturulamadı. Bilgileri kontrol ediniz.!",
   "monthly": "Monthly",
   "name": "Name",
+  "name_max_length": "Name cannot be more than 20 characters long",
+  "name_min_length": "Name must be at least 5 characters long",
+  "name_regex_pattern": "Name must be a valid",
+  "name_required": "Name is required",
+  "new_increase": "New Increase",
   "no": "No",
   "not_match": "Passwords do not match",
+  "offer_form": "Offer Form",
   "offers": "Offers",
   "ok": "Ok",
   "password": "Password",
@@ -92,162 +174,80 @@
   "password_required": "Password is required",
   "password_success": "Password changed successfully",
   "phone": "Phone",
+  "phone_number": "Phone Number",
+  "plasiyer": "Plasiyer",
+  "price": "Price",
+  "price_empty": "Price cannot be empty",
+  "price_max_length": "Price cannot be more than 10 characters long",
+  "price_min_length": "Price must be at least 1 characters long",
+  "price_regex_pattern": "Price must be a valid",
+  "price_required": "Price is required",
+  "price_with_vat": "With Wat Price",
+  "price_with_vat_empty": "With Wat Price cannot be empty",
+  "price_with_vat_max_length": "With Wat Price cannot be more than 10 characters long",
+  "price_with_vat_min_length": "With Wat Price must be at least 1 characters long",
+  "price_with_vat_regex_pattern": "With Wat Price must be a valid",
+  "price_with_vat_required": "With Wat Price is required",
+  "range": "Range",
+  "rate": "Rate",
   "refineries": "Refineries",
+  "refineries_description": "Refineries Description",
+  "refinery": "Refinery",
+  "refinery_required": "Refinery is required",
+  "rejected_status": "Rejected",
   "reports": "Reports",
-  "reset": "Reset Email Address Password",
-  "salesPerson": "Sales Person",
+  "required_cost": "Cost is required",
+  "required_maturity": "Maturity is required",
+  "required_phone_type": "Phone Type Required 5** *** ** ** ",
+  "required_range": "Range is required",
+  "required_rate": "Rate is required",
   "required_salesPerson": "Sales Person is required",
+  "reset": "Reset Email Address Password",
+  "role": "Role",
+  "salesPerson": "Sales Person",
+  "sales_person_code": "Sales Person Code",
   "save": "Save",
+  "screen_size_error": "Screen size is too small.",
+  "select": "Select",
+  "select_customer": "Select Customer",
   "send": "Send",
+  "send_offer": "Send Offer",
   "settings": "Settings",
   "station": "Station",
-  "stations": "Stations",
   "station_rate": "Station Rate",
+  "station_required": "Station is required",
+  "stations": "Stations",
+  "status": "Status",
   "success": "Password reset successfully",
   "tax_number": "Tax Number",
   "tax_office": "Tax Office",
+  "theme": "Theme",
   "title": "Home Page",
   "todoList": "Todo List",
+  "total_price": "Total Price",
   "translate_menu_title": "{translate, select, station{Stations} maturityCalculate{Maturity Calculated} stationMaturity{Station Maturity} corporation{Corporations} corporationMaturity{Corporation Maturity} refinery{Refineries} offer{Offers} customer{Customers} salesPerson{Sales Person} account{Account} settings{Settings} dashboard{Dashboard}reports{Reports} logout{Logout}  info{Info} language{Language}  theme{Theme}  create{Create}  list{List/Edit} other{Other}}",
   "translate_status_title": "{translate, select,selected{All}  CALCULATED{Hesaplanan Teklif} APPROVAL_IN_PROGRESS{Teklif Onay} TO_BE_ORDERED{Teklif onaylandı} APPROVAL_REJECTED{Teklif reddedildi} IN_NEGOTIATION{Güncel teklif müşteriye önerildi} ACCEPTED{Güncel teklifi müşteri kabul etti} RESCINDED{Güncel teklifi müşteri red etti} SHIPPED{Tamamlandı} CANCELLED{Teklif geri çekildi ve iptal edildi}  DRAFT{Kaydet} APPROVED{Teklif müşteriye gönderilmeye hazır} ORDERED{Sipariş hazırlandı} other{Diğer}}",
-  "turkish": "Turkish",
-  "username_max_length": "Username cannot be more than 20 characters long",
-  "username_min_length": "Username must be at least 5 characters long",
-  "username_required": "Username is required",
-  "username_regex_pattern": "Username must be a valid email address",
-  "firstname_required": "Firstname is required",
-  "firstname_min_length": "Firstname must be at least 5 characters long",
-  "firstname_max_length": "Firstname cannot be more than 20 characters long",
-  "lastname_required": "Lastname is required",
-  "lastname_min_length": "Lastname must be at least 5 characters long",
-  "lastname_max_length": "Lastname cannot be more than 20 characters long",
-  "authorities": "Authorities",
-  "authorities_required": "Authorities is required",
-  "users": "Users",
-  "weekly": "Weekly",
-  "welcome": "Welcome",
-  "yes": "Yes",
-  "first_name": "First Name",
-  "last_name": "Last Name",
-  "phone_number": "Phone Number",
-  "sales_person_code": "Sales Person Code",
-  "edit_user": "Edit User",
-  "edit_refinery": "Edit Refinery",
-  "edit_corporation": "Edit Corporation",
-  "edit_station": "Edit Station",
-  "edit_offer": "Edit Offer",
-  "edit_station_maturity": "Edit Station Maturity",
-  "edit_corporation_maturity": "Edit Corporation Maturity",
-  "list_user": "List User",
-  "list_refinery": "List Refinery",
-  "list_corporation": "List Corporation",
-  "list_station": "List Station",
-  "list_offer": "List Offer",
-  "id": "ID",
-  "list": "List",
-  "login": "Login",
-  "plasiyer": "Plasiyer",
-  "create_user": "Create User",
-  "create_refinery": "Create Refinery",
-  "create_corporation": "Create Corporation",
-  "create_corporation_maturity": "Create Corporation Maturity",
-  "create_station": "Create Station",
-  "create_station_maturity": "Create Station Maturity",
-  "create_offer": "Create Offer",
-  "required_phone_type": "Phone Type Required 5** *** ** ** ",
-  "range": "Range",
-  "required_range": "Range is required",
-  "screen_size_error": "Screen size is too small.",
-  "cari_kod": "Account Code",
-  "detail": "Detail",
-  "role": "Role",
-  "edit": "Edit",
-  "name_required": "Name is required",
-  "name_min_length": "Name must be at least 5 characters long",
-  "name_max_length": "Name cannot be more than 20 characters long",
-  "name_regex_pattern": "Name must be a valid",
-  "refineries_description": "Refineries Description",
-  "description_required": "Description is required",
-  "description_min_length": "Description must be at least 5 characters long",
-  "description_max_length": "Description cannot be more than 20 characters long",
-  "description_regex_pattern": "Description must be a valid",
-  "price": "Price",
-  "price_required": "Price is required",
-  "price_min_length": "Price must be at least 1 characters long",
-  "price_max_length": "Price cannot be more than 10 characters long",
-  "price_regex_pattern": "Price must be a valid",
-  "price_empty": "Price cannot be empty",
-  "price_with_vat": "With Wat Price",
-  "price_with_vat_required": "With Wat Price is required",
-  "price_with_vat_min_length": "With Wat Price must be at least 1 characters long",
-  "price_with_vat_max_length": "With Wat Price cannot be more than 10 characters long",
-  "price_with_vat_regex_pattern": "With Wat Price must be a valid",
-  "price_with_vat_empty": "With Wat Price cannot be empty",
-  "active": "Active",
-  "city_required": "City is required",
-  "maturity_types": "Maturity Types",
-  "cost": "Cost",
-  "maturity": "Maturity",
-  "rate": "Rate",
-  "delete": "Delete",
-  "delete_confirmation": "Are you sure you want to delete?",
-  "create": "Create",
-  "required_maturity": "Maturity is required",
-  "required_cost": "Cost is required",
-  "required_rate": "Rate is required",
-  "change_nothing": "Nothing changed",
-  "find": " Find ",
-  "select": "Select",
-  "select_customer": "Select Customer",
-  "vat_no": "Vat No",
-  "debt": "Debt",
-  "credit": "Credit",
-  "destination_city": "Destination City",
-  "destination_district": "Destination District",
-  "destination_address": "Destination Address",
-  "transport_distance": "Transport Distance Km",
-  "transport_distance_required": "Transport Distance is required",
-  "transport_distance_numeric": "Transport Distance must be a valid",
   "transport_cost": "Transport Cost TL",
-  "transport_cost_tl": "Transport",
-  "transport_cost_required": "Transport Cost is required",
   "transport_cost_numeric": "Transport Cost must be a valid",
-  "birim": "birim",
-  "birim_required": "birim is required",
-  "birim_numeric": "birim must be a valid",
-  "day": "Day",
-  "credit_card": "Credit Card",
-  "calculate": "Calculate",
-  "corporation_required": "Corporation is required",
-  "station_required": "Station is required",
-  "destination_city_required": "Destination City is required",
-  "refinery_required": "Refinery is required",
-  "increase": "Increase",
-  "new_increase": "New Increase",
-  "increase_unit_price": "Increase Price",
-  "unit_price_update": "Last Price Update",
-  "offer_form": "Offer Form",
-  "refinery": "Refinery",
-  "corporation": "Corporation",
-  "maturity_type": "Maturity Type",
-  "total_price": "Total Price",
-  "status": "Status",
-  "unit_price": "Unit Price",
-  "update": "Update",
-  "document": "Document",
-  "theme": "Theme",
-  "date": "Date",
-  "company_name": "Company Name",
-  "exit": "Exit",
-  "update_description": "Update Description",
+  "transport_cost_required": "Transport Cost is required",
+  "transport_cost_tl": "Transport",
   "transport_date": "Transport Date",
   "transport_date_required": "Transport Date is required",
-  "calculated_status": "Calculated",
-  "rejected_status": "Rejected",
-  "confirmation_status": "Confirmation Offers",
-  "approved_status": "Approved Offers",
-  "completed_status": "Completed",
-  "cancelled_status": "Cancelled",
-  "send_offer": "Send Offer",
-  "calculated_maturity_screen": "Calculated Maturity Screen"
+  "transport_distance": "Transport Distance Km",
+  "transport_distance_numeric": "Transport Distance must be a valid",
+  "transport_distance_required": "Transport Distance is required",
+  "turkish": "Turkish",
+  "unit_price": "Unit Price",
+  "unit_price_update": "Last Price Update",
+  "update": "Update",
+  "update_description": "Update Description",
+  "username_max_length": "Username cannot be more than 20 characters long",
+  "username_min_length": "Username must be at least 5 characters long",
+  "username_regex_pattern": "Username must be a valid email address",
+  "username_required": "Username is required",
+  "users": "Users",
+  "vat_no": "Vat No",
+  "weekly": "Weekly",
+  "welcome": "Welcome",
+  "yes": "Yes"
 }
