--- a/lib/l10n/intl_tr.arb
+++ b/lib/l10n/intl_tr.arb
@@ -1,28 +1,81 @@
 {
   "account": "Hesabım",
+  "active": "Aktif",
   "address": "Address",
   "admin": "Admin",
+  "approved_status": "Teklif Onay",
+  "authorities": "Yetkiler",
+  "authorities_required": "Yetki gereklidir",
+  "birim": "birim",
+  "birim_numeric": "birim sayısal olmalıdır",
+  "birim_required": "birim gereklidir",
+  "calculate": "Hesapla",
+  "calculated_maturity_screen": "Vade Hesaplama",
+  "calculated_status": "Hesaplanan",
   "cancel": "İptal",
+  "cancelled_status": "İptal Edildi",
+  "cari_kod": "Müşteri Kodu",
   "change": "Change Password",
+  "change_nothing": "Değişiklik bulunamadı",
   "change_password": "Şifre Değiştir",
-  "city": "Şehir",
   "cities": "Şehirler",
+  "city": "Şehir",
+  "city_required": "Şehir gereklidir",
   "code": "Code",
-  "confirm": "Passwords must match",
-  "confirm_new": "Confirm New Password",
+  "company_name": "Firma ismi",
+  "completed_status": "Tamamlandı",
+  "confirm": "Onaylandı",
+  "confirm_new": "Şifre değiştirildi",
+  "confirmation_status": "Teklif Onaylandı",
+  "corporation": "Dağıtım Firması",
+  "corporation_required": "Dağıtım Firması gereklidir",
   "corporations": "Ana Firmaları",
+  "cost": "Maliyet",
+  "create": "Oluştur",
   "createNewOffer": "Yeni Teklif Oluştur",
+  "create_corporation": "Dağıtım Firması Oluştur",
+  "create_corporation_maturity": "Ana Firma Vade Oluştur",
+  "create_offer": "Teklif Oluştur",
   "create_record_error": "Kayıt Oluşturulamadı. Bilgileri kontrol ediniz.!",
+  "create_refinery": "Üretici Oluştur",
+  "create_station": "Alt Firma Oluştur",
+  "create_station_maturity": "Alt Firma Vade Oluştur",
+  "create_user": "Kullanıcı Oluştur",
+  "credit": "Kredi",
+  "credit_card": "Kredi Kartı",
   "currentPassword": "Current Password",
   "customer": "Müşteri",
   "customers": "Müşteriler",
   "daily": "Günlük",
   "darkLight": "Dark/Light Mode",
   "dashboard": "Dashboard",
+  "date": "Tarih",
+  "day": "Gün",
+  "debt": "Borç",
+  "delete": "Sil",
+  "delete_confirmation": "Silmek istediğinize emin misiniz?",
   "description": "CRM",
+  "description_max_length": "Açıklama en fazla 20 karakter uzunluğunda olmalıdır",
+  "description_min_length": "Açıklama en az 5 karakter uzunluğunda olmalıdır",
   "description_offer": "Açıklama",
+  "description_regex_pattern": "Açıklama geçerli değil",
+  "description_required": "Açıklama gereklidir",
+  "destination_address": "Varış Yeri",
+  "destination_city": "Varış Yeri İl",
+  "destination_city_required": "Varış Şehri gereklidir",
+  "destination_district": "Varış Yeri İlçe",
+  "detail": "Detay",
   "district": "İlçe",
   "districts": "İlçeler",
+  "document": "Döküman",
+  "edit": "Düzenle",
+  "edit_corporation": "Dağıtım Firması Düzenle",
+  "edit_corporation_maturity": "Dağıtım Şirketi Vade Düzenle",
+  "edit_offer": "Teklif Düzenle",
+  "edit_refinery": "Üretici Düzenle",
+  "edit_station": "Alt Firma Düzenle",
+  "edit_station_maturity": "Alt Firma Vade Düzenle",
+  "edit_user": "Kullanıcı Düzenle",
   "email": "E-posta",
   "email_error": "E-posta gönderilemedi",
   "email_pattern": "E-posta adresi geçerli değil",
@@ -35,6 +88,12 @@
   "empty": "Password cannot be left blank",
   "english": "İngilizce",
   "error": "Email address not found",
+  "exit": "Çıkış",
+  "find": " Ara ",
+  "first_name": "İsim",
+  "firstname_max_length": "İsim en fazla 20 karakter uzunluğunda olmalıdır",
+  "firstname_min_length": "İsim en az 5 karakter uzunluğunda olmalıdır",
+  "firstname_required": "İsim gereklidir",
   "forgot": "Forgot Password",
   "global": "CRM",
   "home": "Anasayfa",
@@ -65,25 +124,46 @@
   "http_431": "Request Header Fields Too Large",
   "http_451": "Unavailable For Legal Reasons",
   "http_500": "Internal Server Error",
+  "id": "ID",
+  "increase": "Revize",
+  "increase_unit_price": "Revize Fiyat",
   "indicator": "Loading...",
   "language_select": "Dil Seçimi",
-  "listOffer": "Teklifler",
-  "id": "ID",
+  "last_name": "Soyisim",
+  "lastname_max_length": "Soyisim en fazla 20 karakter uzunluğunda olmalıdır",
+  "lastname_min_length": "Soyisim en az 5 karakter uzunluğunda olmalıdır",
+  "lastname_required": "Soyisim gereklidir",
   "list": "Listele",
+  "listOffer": "Teklifler",
+  "list_corporation": "Ana Firmaları",
+  "list_offer": "Teklifler",
+  "list_refinery": "Üreticiler",
+  "list_station": "Alt Firmalar",
+  "list_user": "Kullanıcılar",
   "loading": "Loading...",
   "logging_in": "Giriş yapılıyor...",
+  "login": "Kullanıcı Adı",
   "login_button": "Giriş Yap",
   "login_error": "Giriş yapılamadı.",
   "login_password": "Şifre",
   "login_user_name": "Kullanıcı adı",
   "logout": "Çıkış Yap",
   "logout_sure": "Çıkış yapmak istediğinize emin misiniz?",
+  "maturity": "Vade",
+  "maturity_type": "Vade Tipi",
+  "maturity_types": "Vade Tipleri",
   "menu": "Menu",
   "messages": "Kayıt Oluşturulamadı. Bilgileri kontrol ediniz.!",
   "monthly": "Aylık",
   "name": "İsim",
+  "name_max_length": "İsim en fazla 20 karakter uzunluğunda olmalıdır",
+  "name_min_length": "İsim en az 5 karakter uzunluğunda olmalıdır",
+  "name_regex_pattern": "İsim geçerli değil",
+  "name_required": "İsim gereklidir",
+  "new_increase": "Yeni Bindirim Oranı",
   "no": "Hayır",
   "not_match": "Passwords do not match",
+  "offer_form": "Teklif Formu",
   "offers": "Teklifler",
   "ok": "Tamam",
   "password": "Password",
@@ -94,161 +174,81 @@
   "password_required": "Şifre gereklidir",
   "password_success": "Password changed successfully",
   "phone": "Phone",
+  "phone_number": "Tel No",
+  "plasiyer": "Plasiyer",
+  "price": "Fiyat",
+  "price_empty": "Fiyat boş olamaz",
+  "price_max_length": "Fiyat en fazla 10 karakter uzunluğunda olmalıdır",
+  "price_min_length": "Fiyat en az 1 karakter uzunluğunda olmalıdır",
+  "price_regex_pattern": "Fiyat geçerli değil",
+  "price_required": "Fiyat gereklidir",
+  "price_with_vat": "Vergi dahil Fiyat",
+  "price_with_vat_empty": "Vergi dahil Fiyat boş olamaz",
+  "price_with_vat_max_length": "Vergi dahil Fiyat en fazla 10 karakter uzunluğunda olmalıdır",
+  "price_with_vat_min_length": "Vergi dahil Fiyat en az 1 karakter uzunluğunda olmalıdır",
+  "price_with_vat_regex_pattern": "Vergi dahil Fiyat geçerli değil",
+  "price_with_vat_required": "Vergi dahil Fiyat gereklidir",
+  "range": "Aralık",
+  "rate": "Oran",
   "refineries": "Üreticiler",
+  "refineries_description": "Açıklama",
+  "refinery": "Üretici",
+  "refinery_required": "Üretici gereklidir",
+  "rejected_status": "Reddedilen",
   "reports": "Raporlar",
-  "reset": "Reset Email Address Password",
-  "salesPerson": "Plasiyer",
+  "required_cost": "Maliyet gereklidir",
+  "required_maturity": "Vade gereklidir",
+  "required_phone_type": "Telefon numarası 5** *** ** ** formatında ve 10 karakter olmalıdır",
+  "required_range": "Aralık gereklidir",
+  "required_rate": "Oran gereklidir",
   "required_salesPerson": "Plasiyer gereklidir",
+  "reset": "Reset Email Address Password",
+  "role": "Rol",
+  "salesPerson": "Plasiyer",
+  "sales_person_code": "Plasiyer Kodu",
   "save": "Kaydet",
+  "screen_size_error": "Ekran boyutu çok küçük.",
+  "select": "Seçiniz",
+  "select_customer": "Müşteri Seçiniz",
   "send": "Gönder",
+  "send_offer": "Teklifi Onaya Gönder",
   "settings": "Ayarlar",
   "station": "Dolum Tesisi",
-  "stations": "Alt Firmalar",
   "station_rate": "Alt Firmalar Oran",
+  "station_required": "Alt Firma gereklidir",
+  "stations": "Alt Firmalar",
+  "status": "Durum",
   "success": "Password reset successfully",
   "tax_number": "Vergi Numarası",
   "tax_office": "Tax Office",
+  "theme": "Tema",
   "title": "Ana Sayfa",
   "todoList": "Yapılacak İşler",
+  "total_price": "Toplam Fiyat",
   "translate_menu_title": "{translate, select,station{Alt Firmalar}  maturityCalculate{Vade Hesaplama}  stationMaturity{Alt Firma Vadeleri} corporation{Ana Firmaları}  corporationMaturity{Ana Firma Vadeleri} refinery{Üreticiler} offer{Teklifler} customer{Müşteriler} salesPerson{Satış Temsilcisi} account{Hesabım} settings{Ayarlar}  dashboard{Grafikler} reports{Raporlar}  logout{Çıkış}  info{Bilgiler}  language{Diller}  theme{Tema}  create{Oluştur}  list{Listele/Düzenle }  other{Diğer}}",
   "translate_status_title": "{translate, select,selected{Tümü}  CALCULATED{Hesaplanan Teklif} APPROVAL_IN_PROGRESS{Teklif Onay} TO_BE_ORDERED{Teklif onaylandı} APPROVAL_REJECTED{Teklif reddedildi} IN_NEGOTIATION{Güncel teklif müşteriye önerildi} ACCEPTED{Güncel teklifi müşteri kabul etti} RESCINDED{Güncel teklifi müşteri red etti} SHIPPED{Tamamlandı} CANCELLED{Teklif geri çekildi ve iptal edildi}  DRAFT{Kaydet} APPROVED{Teklif müşteriye gönderilmeye hazır} ORDERED{Sipariş hazırlandı} other{Diğer}}",
-  "turkish": "Türkçe",
-  "username_max_length": "Kullanıcı adı en fazla 20 karakter uzunluğunda olmalıdır",
-  "username_min_length": "Kullanıcı adı en az 5 karakter uzunluğunda olmalıdır",
-  "username_required": "Kullanıcı adı gereklidir",
-  "username_regex_pattern": "Kullanıcı adı geçerli değil",
-  "firstname_required": "İsim gereklidir",
-  "firstname_min_length": "İsim en az 5 karakter uzunluğunda olmalıdır",
-  "firstname_max_length": "İsim en fazla 20 karakter uzunluğunda olmalıdır",
-  "lastname_required": "Soyisim gereklidir",
-  "lastname_min_length": "Soyisim en az 5 karakter uzunluğunda olmalıdır",
-  "lastname_max_length": "Soyisim en fazla 20 karakter uzunluğunda olmalıdır",
-  "authorities": "Yetkiler",
-  "authorities_required": "Yetki gereklidir",
-  "users": "Kullanıcılar",
-  "weekly": "Haftalık",
-  "welcome": "Hoş geldiniz",
-  "yes": "Evet",
-  "first_name": "İsim",
-  "last_name": "Soyisim",
-  "phone_number": "Tel No",
-  "sales_person_code": "Plasiyer Kodu",
-  "edit_user": "Kullanıcı Düzenle",
-  "edit_corporation": "Dağıtım Firması Düzenle",
-  "edit_refinery": "Üretici Düzenle",
-  "edit_station": "Alt Firma Düzenle",
-  "edit_offer": "Teklif Düzenle",
-  "edit_station_maturity": "Alt Firma Vade Düzenle",
-  "edit_corporation_maturity": "Dağıtım Şirketi Vade Düzenle",
-  "list_user": "Kullanıcılar",
-  "list_corporation": "Ana Firmaları",
-  "list_refinery": "Üreticiler",
-  "list_station": "Alt Firmalar",
-  "list_offer": "Teklifler",
-  "login": "Kullanıcı Adı",
-  "plasiyer": "Plasiyer",
-  "create_user": "Kullanıcı Oluştur",
-  "create_refinery": "Üretici Oluştur",
-  "create_corporation": "Dağıtım Firması Oluştur",
-  "create_corporation_maturity": "Ana Firma Vade Oluştur",
-  "create_station": "Alt Firma Oluştur",
-  "create_station_maturity": "Alt Firma Vade Oluştur",
-  "create_offer": "Teklif Oluştur",
-  "required_phone_type": "Telefon numarası 5** *** ** ** formatında ve 10 karakter olmalıdır",
-  "range": "Aralık",
-  "required_range": "Aralık gereklidir",
-  "screen_size_error": "Ekran boyutu çok küçük.",
-  "cari_kod": "Cari Kodu",
-  "detail": "Detay",
-  "role": "Rol",
-  "edit": "Düzenle",
-  "name_required": "İsim gereklidir",
-  "name_min_length": "İsim en az 5 karakter uzunluğunda olmalıdır",
-  "name_max_length": "İsim en fazla 20 karakter uzunluğunda olmalıdır",
-  "name_regex_pattern": "İsim geçerli değil",
-  "refineries_description": "Açıklama",
-  "description_required": "Açıklama gereklidir",
-  "description_min_length": "Açıklama en az 5 karakter uzunluğunda olmalıdır",
-  "description_max_length": "Açıklama en fazla 20 karakter uzunluğunda olmalıdır",
-  "description_regex_pattern": "Açıklama geçerli değil",
-  "price": "Fiyat",
-  "price_required": "Fiyat gereklidir",
-  "price_min_length": "Fiyat en az 1 karakter uzunluğunda olmalıdır",
-  "price_max_length": "Fiyat en fazla 10 karakter uzunluğunda olmalıdır",
-  "price_regex_pattern": "Fiyat geçerli değil",
-  "price_empty": "Fiyat boş olamaz",
-  "price_with_vat": "Vergi dahil Fiyat",
-  "price_with_vat_required": "Vergi dahil Fiyat gereklidir",
-  "price_with_vat_min_length": "Vergi dahil Fiyat en az 1 karakter uzunluğunda olmalıdır",
-  "price_with_vat_max_length": "Vergi dahil Fiyat en fazla 10 karakter uzunluğunda olmalıdır",
-  "price_with_vat_regex_pattern": "Vergi dahil Fiyat geçerli değil",
-  "price_with_vat_empty": "Vergi dahil Fiyat boş olamaz",
-  "active": "Aktif",
-  "city_required": "Şehir gereklidir",
-  "maturity_types": "Vade Tipleri",
-  "cost": "Maliyet",
-  "maturity": "Vade",
-  "rate": "Oran",
-  "delete": "Sil",
-  "delete_confirmation": "Silmek istediğinize emin misiniz?",
-  "create": "Oluştur",
-  "required_maturity": "Vade gereklidir",
-  "required_cost": "Maliyet gereklidir",
-  "required_rate": "Oran gereklidir",
-  "change_nothing": "Değişiklik bulunamadı",
-  "find": " Ara ",
-  "select": "Seçiniz",
-  "select_customer": "Müşteri Seçiniz",
-  "vat_no": "Vergi No",
-  "debt": "Borç",
-  "credit": "Kredi",
-  "destination_city": "Varış Yeri İl",
-  "destination_district": "Varış Yeri İlçe",
-  "destination_address": "Varış Yeri",
-  "transport_distance": "Taşıma Mesafesi Km",
-  "transport_distance_required": "Taşıma Mesafesi gereklidir",
-  "transport_distance_numeric": "Taşıma Mesafesi sayısal olmalıdır",
   "transport_cost": "Taşıma Maliyeti TL",
-  "transport_cost_tl": "Nakliye",
-  "transport_cost_required": "Taşıma Maliyeti gereklidir",
   "transport_cost_numeric": "Taşıma Maliyeti sayısal olmalıdır",
-  "birim": "birim",
-  "birim_required": "birim gereklidir",
-  "birim_numeric": "birim sayısal olmalıdır",
-  "day": "Gün",
-  "credit_card": "Kredi Kartı",
-  "calculate": "Hesapla",
-  "corporation_required": "Dağıtım Firması gereklidir",
-  "station_required": "Alt Firma gereklidir",
-  "destination_city_required": "Varış Şehri gereklidir",
-  "refinery_required": "Üretici gereklidir",
-  "increase": "Bindirim",
-  "new_increase": "Yeni Bindirim Oranı",
-  "increase_unit_price": "Revize Fiyat",
-  "unit_price_update": "Son Fiyatı Güncelle",
-  "offer_form": "Teklif Formu",
-  "refinery": "Üretici",
-  "corporation": "Dağıtım Firması",
-  "maturity_type": "Vade Tipi",
-  "total_price": "Toplam Fiyat",
-  "status": "Durum",
-  "unit_price": "Birim Fiyat",
-  "update": "Güncelle",
-  "document": "Döküman",
-  "theme": "Tema",
-  "date": "Tarih",
-  "company_name": "Firma ismi",
-  "exit": "Çıkış",
-  "update_description": "Açıklamayı Güncelle",
+  "transport_cost_required": "Taşıma Maliyeti gereklidir",
+  "transport_cost_tl": "Nakliye",
   "transport_date": "Sevk Tarihi",
   "transport_date_required": "Sevk Tarihi gereklidir",
-  "calculated_status": "Hesaplanan",
-  "approved_status": "Teklif Onay",
-  "cancelled_status": "İptal Edildi",
-  "rejected_status": "Reddedilen",
-  "confirmation_status": "Teklif Onaylandı",
-  "completed_status": "Tamamlandı",
-  "send_offer": "Teklifi Onaya Gönder",
-  "calculated_maturity_screen": "Vade Hesaplama"
+  "transport_distance": "Taşıma Mesafesi Km",
+  "transport_distance_numeric": "Taşıma Mesafesi sayısal olmalıdır",
+  "transport_distance_required": "Taşıma Mesafesi gereklidir",
+  "turkish": "Türkçe",
+  "unit_price": "Birim Fiyat",
+  "unit_price_update": "Son Fiyatı Güncelle",
+  "update": "Güncelle",
+  "update_description": "Açıklamayı Güncelle",
+  "username_max_length": "Kullanıcı adı en fazla 20 karakter uzunluğunda olmalıdır",
+  "username_min_length": "Kullanıcı adı en az 5 karakter uzunluğunda olmalıdır",
+  "username_regex_pattern": "Kullanıcı adı geçerli değil",
+  "username_required": "Kullanıcı adı gereklidir",
+  "users": "Kullanıcılar",
+  "vat_no": "Vergi No",
+  "weekly": "Haftalık",
+  "welcome": "Hoş geldiniz",
+  "yes": "Evet"
 }
 
