code checked and updated

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,4 +1,5 @@
 {
+  "main_screen": "Main Screen",
   "list_user": "List User",
   "screen_size_error": "Screen size is too small.",
   "admin": "Admin",
