--- a/lib/l10n/intl_tr.arb
+++ b/lib/l10n/intl_tr.arb
@@ -1,4 +1,5 @@
 {
+  "main_screen": "Ana Ekran",
   "list_user": "Kullanıcılar",
   "screen_size_error": "Ekran boyutu çok küçük.",
   "admin": "Admin",
