feat: register screen, register bloc, update: menu list, change initial page login_screen

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -19,6 +19,7 @@
   "required_phone_type": "Phone Type Required 5** *** ** ** ",
   "email_required": "Email is required",
   "email_pattern": "Email must be a valid email address",
+  "user_name_pattern": "Username must be a valid",
   "lastname_required": "Lastname is required",
   "lastname_min_length": "Lastname must be at least 5 characters long",
   "lastname_max_length": "Lastname cannot be more than 20 characters long",
@@ -33,6 +34,8 @@
   "english": "English",
   "authorities_required": "Authorities is required",
   "create_user": "Create User",
+  "create_user_success": "User created successfully",
+  "create_user_error": "User creation failed",
   "save": "Save",
   "settings": "Settings",
   "account": "Account",
@@ -48,6 +51,7 @@
   "ok": "Ok",
   "password": "Password",
   "password_forgot": "Forgot Password",
+  "register": "Register",
   "password_max_length": "Password cannot be more than 6 characters long",
   "password_min_length": "Password must be at least 5 characters long",
   "password_new": "New Password",
