--- a/lib/l10n/intl_tr.arb
+++ b/lib/l10n/intl_tr.arb
@@ -19,6 +19,7 @@
   "required_phone_type": "Telefon numarası 5** *** ** ** formatında ve 10 karakter olmalıdır",
   "email_required": "E-posta gereklidir",
   "email_pattern": "E-posta adresi geçerli değil",
+  "user_name_pattern": "Kullanıcı adı geçerli değil",
   "lastname_required": "Soyisim gereklidir",
   "lastname_min_length": "Soyisim en az 5 karakter uzunluğunda olmalıdır",
   "lastname_max_length": "Soyisim en fazla 20 karakter uzunluğunda olmalıdır",
@@ -33,6 +34,8 @@
   "english": "İngilizce",
   "authorities_required": "Yetki gereklidir",
   "create_user": "Kullanıcı Oluştur",
+  "create_user_success": "Kullanıcı başarıyla oluşturuldu",
+  "create_user_error": "Kullanıcı oluşturulamadı",
   "save": "Kaydet",
   "settings": "Ayarlar",
   "account": "Hesabım",
@@ -48,6 +51,7 @@
   "ok": "Tamam",
   "password": "Password",
   "password_forgot": "Şifremi unuttum",
+  "register": "Kayıt Ol",
   "password_max_length": "Şifre en fazla 20 karakter uzunluğunda olmalıdır",
   "password_min_length": "Şifre en az 6 karakter uzunluğunda olmalıdır",
   "password_new": "New Password",
