chore: add new i18n fields for change-password screen

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -12,8 +12,11 @@
   "email": "Email",
   "active": "Active",
   "authorities": "Authorities",
-  "required_range": "Range is required",
   "name": "Name",
+  "success": "Success",
+  "failed": "Failed",
+  "required_field": "Required Field!",
+  "required_range": "Range is required",
   "list": "List",
   "edit_user": "Edit User",
   "edit_account": "Edit Account",
@@ -51,6 +54,8 @@
   "login_password": "Password",
   "ok": "Ok",
   "password": "Password",
+  "current_password":"Current Password",
+  "new_password": "New Password",
   "password_forgot": "Forgot Password",
   "register": "Register",
   "password_max_length": "Password cannot be more than 6 characters long",
