--- a/lib/l10n/intl_tr.arb
+++ b/lib/l10n/intl_tr.arb
@@ -12,8 +12,11 @@
   "email": "E-posta",
   "active": "Aktif",
   "authorities": "Yetkiler",
-  "required_range": "Aralık gereklidir",
   "name": "İsim",
+  "success": "Başarılı",
+  "failed": "Başarısız",
+  "required_field": "Zorunlu Alan!",
+  "required_range": "Aralık gereklidir",
   "list": "Listele",
   "edit_user": "Kullanıcı Düzenle",
   "edit_account": "Hesabı Düzenle",
@@ -51,6 +54,8 @@
   "login_password": "Şifre",
   "ok": "Tamam",
   "password": "Password",
+  "current_password":"Mevcut Şifre",
+  "new_password": "Yeni Şifre",
   "password_forgot": "Şifremi unuttum",
   "register": "Kayıt Ol",
   "password_max_length": "Şifre en fazla 20 karakter uzunluğunda olmalıdır",
