test: user, city, district, authority repository test completed. Model and repository layer coverage %100

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -12,6 +12,7 @@
   "email": "Email",
   "active": "Active",
   "authorities": "Authorities",
+  "authority": "Authority",
   "name": "Name",
   "success": "Success",
   "failed": "Failed",
