--- a/lib/l10n/intl_tr.arb
+++ b/lib/l10n/intl_tr.arb
@@ -11,7 +11,8 @@
   "phone_number": "Tel No",
   "email": "E-posta",
   "active": "Aktif",
-  "authorities": "Yetkiler",
+  "authorities": "Roller",
+  "authority": "Rol",
   "name": "İsim",
   "success": "Başarılı",
   "failed": "Başarısız",
