test: register screen and bloc tests

--- a/lib/l10n/intl_tr.arb
+++ b/lib/l10n/intl_tr.arb
@@ -16,7 +16,7 @@
   "name": "İsim",
   "success": "Başarılı",
   "failed": "Başarısız",
-  "required_field": "Zorunlu Alan!",
+  "required_field": "Zorunlu Alan",
   "required_range": "Aralık gereklidir",
   "list": "Listele",
   "edit_user": "Kullanıcı Düzenle",
