--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -16,7 +16,7 @@
   "name": "Name",
   "success": "Success",
   "failed": "Failed",
-  "required_field": "Required Field!",
+  "required_field": "Required Field",
   "required_range": "Range is required",
   "list": "List",
   "edit_user": "Edit User",
