feat: user-screen structure changed(create, update, view screen removed and move to the UserEditorScreen)

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -14,23 +14,27 @@
   "success": "Success",
   "failed": "Failed",
   "required_field": "Required Field",
+  "min_length_2": "Field must be at least 2 characters long",
+  "min_length_3": "Field must be at least 3 characters long",
+  "min_length_4": "Field must be at least 4 characters long",
+  "min_length_5": "Field must be at least 5 characters long",
+  "max_length_10": "Field cannot be more than 10 characters long",
+  "max_length_20": "Field cannot be more than 20 characters long",
+  "max_length_50": "Field cannot be more than 50 characters long",
+  "max_length_100": "Field cannot be more than 100 characters long",
+  "max_length_250": "Field cannot be more than 250 characters long",
+  "max_length_500": "Field cannot be more than 500 characters long",
+  "max_length_1000": "Field cannot be more than 1000 characters long",
+  "max_length_4000": "Field cannot be more than 4000 characters long",
+
   "required_range": "Range is required",
   "list": "List",
   "list_user": "List User",
   "new_user": "New User",
   "edit_user": "Edit User",
-  "email_required": "Email is required",
+  "view_user": "View User",
+  "delete_user": "Delete User",
   "email_pattern": "Email must be a valid email address",
-  "lastname_required": "Lastname is required",
-  "lastname_min_length": "Lastname must be at least 5 characters long",
-  "lastname_max_length": "Lastname cannot be more than 20 characters long",
-  "firstname_required": "Firstname is required",
-  "firstname_min_length": "Firstname must be at least 5 characters long",
-  "firstname_max_length": "Firstname cannot be more than 20 characters long",
-  "username_required": "Username is required",
-  "username_max_length": "Username cannot be more than 20 characters long",
-  "username_min_length": "Username must be at least 5 characters long",
-  "username_regex_pattern": "Username must be a valid email address",
   "turkish": "Turkish",
   "english": "English",
   "create_user": "Create User",
@@ -43,6 +47,10 @@
   "logout_sure": "Are you sure you want to logout?",
   "yes": "Yes",
   "no": "No",
+  "warning": "Warning",
+  "unsaved_changes": "You have unsaved changes. Are you sure you want to leave?",
+  "no_changes_made": "No changes made",
+  "no_data": "No Data",
   "login_user_name": "Username",
   "login_password": "Password",
   "current_password": "Current Password",
