fix: user list screen filter rows layout fixed

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -29,6 +29,7 @@
 
   "required_range": "Range is required",
   "list": "List",
+  "filter": "Filter",
   "list_user": "List User",
   "new_user": "New User",
   "edit_user": "Edit User",
