--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -73,5 +73,8 @@
   "only_numbers": "Only numbers are allowed",
   "otp_length": "OTP must be 6 characters long",
   "otp_code": "OTP Code",
-  "otp_sent_to": "OTP sent to"
+  "otp_sent_to": "OTP sent to",
+  "taskSaveScreenTitle": "Task Save",
+  "taskName": "Task Name",
+  "taskPrice": "Task Price"
 }
